@@ -1,4 +1,10 @@
 ==============
+AS OF 20241215
+==============
+
+- SetDigOut replaced by Set_NI_DO.
+
+==============
 AS OF 20240129
 ==============
 
